--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  background-color: bisque;
+  font-family: "digital-7";
+  margin: 10px;
+}
+
+@font-face {
+  font-family: "digital-7";
+  src: url("/assets/digital-7.ttf");
+}
